# SOFTX_2020_155

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  Makefile  Makefile.in  NEWS  README  README-cmake.txt  README-daqd-cmake.txt  TODO  bootstrap  configure  configure.ac  configure.in  install  install-adclist  install-noawg  install-nort  reformat_files  uninstall
src/: CMakeLists.txt  doxyConfig
src/args/: CMakeLists.txt  args.cc  args.h  args_internal.hh
src/catch/: CMakeLists.txt
src/daqd/: BROADCAST  CMakeLists.txt  Makefile.in  MyLexer.hh  README  archive.cc  archive.hh  atomic.hh  bootstrap  broadcast_daqd.h  channel.h  channel.hh  checksum_crc32.cc  checksum_crc32.hh  circ.cc  circ.h  circ.hh  cmask_t.h  comm-lex.l  comm.y  comm_impl.cc  comm_impl.hh  config.h.cmake  config.h.in  configure.ac  configure.in  conv.hh  crc8.cc  crc_diff.py  cts2l.c  daniel_stream.cc  daqc.h  daqc_access.c  daqcn.c  daqd.cc  daqd.hh  daqd_thread.cc  daqd_thread.hh  debug.h  dlmalloc.h  (+74 more)
src/doc/: top.dox
src/drv/: CMakeLists.txt  ExtraSymbols.symvers  crc.c  fmReadCoeff.c  fmReadCoeff_biquad.c  param.c  rfm.c  shmem.c  susWatchdogFilters.c  sync.c  tpresolv.c
src/dv/: CMakeLists.txt  Makefile  dataviewer.sh  dataviewer.sh.cmake  dataviewer_msgwin.sh  dataviewer_msgwin.sh.cmake  dataviewer_nds.sh.cmake
src/dx_stream/: Makefile  READ_ME.txt  dx.h  dx_bcLib.c  dx_broadcast.c  dx_stream.c  test_bcLib.c
src/epics/: CMakeLists.txt
src/epicsv4_stream/: CMakeLists.txt  epicsv4_stream.cc  gps.hh
src/fe/: README  cdsTiming.h  commData.c  commData2.c  commData3.c  commDataUsp.c  controller.c  controllerApp.c  controllerAppUser.c  controllerCymac.c  controllerIop.c  controllerIopUser.c  controllerLR.c  controllerSwitch.c  controllerTS.c  controllerUser.c  controllerVirtual.c  controllerWiop.c  dolphin.c  dolphinNet1.c  dolphin_usp.c  fb.c  feSelectCode.c  iop.c  map.c  mapApp.c  mapVirtual.c  mapVirtual.h  moduleLoad.c  moduleLoadApp.c  moduleLoadCommon.c  moduleLoadIop.c  moduleLoadSwitch.c  moduleLoadTS.c  moduleLoadVirtual.c  myri.c  myriexpress.c  quad.c  quadfe.c  rcguser.c  (+3 more)
src/fe_data_concentrator/: Makefile  fe_dc.c
src/fe_stream_test/: CMakeLists.txt  Makefile  fe_check.cc  fe_generator_support.cc  fe_generator_support.hh  fe_multi_stream_test.cc  fe_stream_check.cc  fe_stream_check_edcu_nds.cc  fe_stream_check_nds.cc  fe_stream_generator.cc  fe_stream_generator.hh  fe_stream_test.cc  gps.hh  lookup_chan_from_ini.py  manage_master_file.py  str_split.cc  str_split.hh
src/gds/: CMakeLists.txt  DAQC_api.cc  DAQC_api.hh  DAQSocket.cc  DAQSocket.hh  InspiralRange.cc  Makefile  PConfig.h  TODO  autostart.cc  awg.c  awg.h  awg_server.c  awg_server.h  awgapi.c  awgapi.h  awgfunc.c  awgfunc.h  awgtpman.c  awgtype.h  caldate_mjd.c  channel_server.cc  channel_server.hh  channelinput.cc  channelinput.hh  chnconfd.cc  chndump.c  chnnet.c  cobox.c  cobox.h  confinfo.c  confinfo.h  confserver.c  confserver.h  conftype.h  databroker.cc  databroker.hh  diag.cc  diagconfd.c  diagd.cc  (+145 more)
src/gdsConfig/: README  chnconf  diagconf  rpc  services
src/include/: ccodeio.h  cds_types.h  commData.h  commData2.h  commData3.h  controller.h  controllerko.h  crc.h  daq_core.h  daq_core_defs.h  daq_data_types.h  daqmap.h  dtoa.h  fe.h  feComms.h  feSelectHeader.h  feuser.h  findSharedMemory.h  fm10Gen.h  fmFir.h  fmReadCoeff.h  fpvalidate.h  hepi.h  inlineMath.h  isnan.h  modelrate.h  omc.h  param.h  pde.h  pnm.h  pnm_asc.h  pnm_lsc.h  proc.h  quad.h  rcgversion.h  sus.h  tRamp.h
src/ix_stream/: CMakeLists.txt  Makefile  READ_ME.txt  debug_array.hh  decode_zmqrcv_recv_dump.py  dix_recv.c  dix_xmit.c  dolphin_common.c  dolphin_common.cc  dolphin_common.hh  gps.hh  ix_dc_xmit.c  ix_fb_rcv.c  ix_multi_stream.c  ix_rcvr.c  ix_rcvr_threads.c  ix_test.c  ix_xmit.c  mx2ix.c  mx_rcv.cc  mx_rcv_simple.cc  recvr_utils.hh  zmq_rcv_ix_xmit.c  zmq_rcv_ix_xmit.cc  zmq_rcv_ix_xmit_delay.cc
src/local_dc/: CMakeLists.txt  local_dc.c  local_dc_utils.h  test_local_dc.sh.in
src/mx_stream/: CMakeLists.txt  Makefile  README_MX_FE.txt  atomic_config.h.cmake  checksum_crc32.c  mx_byteswap.h  mx_crc_only.c  mx_fe.c  mx_mem_test.c  mx_stream.c  mx_stream.cc  mx_stream_single.c  omx_recv.c  omx_recv_buffered.cc  omx_xmit.c  recv_buffer.hh  test_common.h
src/nds/: CMakeLists.txt  IRIG-B.cc  IRIG-B.hh  Makefile.in  PConfig.h  bootstrap  clean_jobs.cron  combiner.cc  config.h.cmake  config.h.in  configure.ac  configure.in  daqd.cc  daqd_net.cc  daqd_net.hh  datastreamcombiner.cc  debug.h  fracfg.cc  frcrc.cc  frdiff.cc  fririgb.cc  frvtoc.cc  io.h  main.cc  mergetrend.cc  mmap.hh  mmap_ptr.hh  mmstream.cc  mmstream.hh  myframereadplan.cc  myframereadplan.hh  nds.cc  nds.hh  plan.cc  plan.hh  rawminutetrend.cc  readframefilearchive.cc  readtocframefilearchive.cc  ref_ptr.hh  refcount.hh  (+4 more)
src/pcie_switch/: README
src/perldaq/: a.pl  daq.pm  test.pl
src/pub_sub_stream/: CMakeLists.txt  arena.hh  cds_pub_sub.cc  cps_recv_admin.cc  cps_recv_admin.hh  dc_stats.cc  dc_stats.hh  make_unique.hh  message_queue.hh  pub_xmit.cc  recv_buffer.cc  recv_buffer.hh  sub_recv_bufferred.cc  test_pub_sub.sh.in  test_pub_sub_daqm_to_daqm.sh.in  test_pub_sub_rmipc_to_daqm.sh.in  test_pub_sub_xmit_recv.sh.in
src/run_number/: CMakeLists.txt  null_run_number_client.cc  run_number.cc  run_number.hh  run_number_client.cc  run_number_client.hh  run_number_internal.hh  run_number_main.cc  run_number_server.hh  run_number_structs.h  run_number_test_client.cc
src/simple_pv/: CMakeLists.txt  simple_epics.cc  simple_epics.hh  simple_epics_internal.cc  simple_epics_internal.hh  simple_pv.c  simple_pv.cc  simple_pv.h
src/util/: CMakeLists.txt  biquad.c  modelrate.c  mv_old_filter_trends.sh  test_util.c
src/zmq_stream/: CMakeLists.txt  Makefile  README  dc.db  dc_utils.c  dc_utils.h  gdstp_test.c  recv_atomic.h  simple_pv.c  simple_pv.h  test_zmq_xmit_recv.sh.in  zmq_daq.h  zmq_daq_core.h  zmq_dc.cc  zmq_dc_recv.c  zmq_dc_recv.cc  zmq_dc_recv.h  zmq_fe.c  zmq_multi_rcvr.c  zmq_multi_stream.c  zmq_pc.py  zmq_proxy.c  zmq_recv.cc  (+7 more)
(+1296 files in other folders)
