project(daqd-trunk)
cmake_minimum_required(VERSION 3.0)

FIND_PROGRAM(BISON_PROG bison)
FIND_PROGRAM(FLEX_PROG flex)

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/config/cmake" )
message("cmake modules" ${CMAKE_MODULE_PATH})

INCLUDE(CheckCXXCompilerFlag)
INCLUDE(CheckIncludeFile)
INCLUDE(CheckIncludeFileCXX)
INCLUDE(CheckFunctionExists)
INCLUDE(FindThreads)
INCLUDE(Sanitizers)
FIND_PACKAGE(PkgConfig)
FIND_PACKAGE(EPICSBase REQUIRED)
FIND_PACKAGE(FrameCPP REQUIRED)

CHECK_CXX_COMPILER_FLAG(-Wno-deprecated-declarations CAN_AVOID_DEPR_DECL)
if(CAN_AVOID_DEPR_DECL)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
endif(CAN_AVOID_DEPR_DECL)

CHECK_CXX_COMPILER_FLAG(-std=c++0x HAS_CXX_0X)
CHECK_CXX_COMPILER_FLAG(-std=c++11 HAS_CXX_11)
if (${HAS_CXX_11})
    set(_ATOMIC_CHECK_FLAGS "-std=c++11")
elseif(${HAS_CXX_0X})
    set(_ATOMIC_CHECK_FLAGS "-std=c++0x")
else(${HAS_CXX_11})
    set(_ATOMIC_CHECK_FLAGS "")
endif (${HAS_CXX_11})

CHECK_INCLUDE_FILE_CXX(cstdatomic HAVE_CSTDATOMIC ${_ATOMIC_CHECK_FLAGS})
CHECK_INCLUDE_FILE_CXX(atomic HAVE_ATOMIC ${_ATOMIC_CHECK_FLAGS})

CHECK_INCLUDE_FILE(FlexLexer.h HAVE_FLEXLEXER_H)
CHECK_INCLUDE_FILE(arpa/inet.h HAVE_ARPA_INET_H)
CHECK_INCLUDE_FILE(assert.h HAVE_ASSERT_H)
CHECK_INCLUDE_FILE(ctype.h HAVE_CTYPE_H)
CHECK_INCLUDE_FILE(errno.h HAVE_ERRNO_H)
CHECK_INCLUDE_FILE(fcntl.h HAVE_FCNTL_H)
CHECK_INCLUDE_FILE(fstream.h HAVE_FSTREAM_H)
CHECK_INCLUDE_FILE(iostream.h HAVE_IOSTREAM_H)
CHECK_INCLUDE_FILE(limits.h HAVE_LIMITS_H)
CHECK_INCLUDE_FILE(math.h HAVE_MATH_H)
CHECK_INCLUDE_FILE(netinet/in.h HAVE_NETINET_IN_H)
CHECK_INCLUDE_FILE(pthread.h HAVE_PTHREAD_H)
CHECK_INCLUDE_FILE(signal.h HAVE_SIGNAL_H)
CHECK_INCLUDE_FILE(stdio.h HAVE_STDIO_H)
CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(stream.h HAVE_STREAM_H)
CHECK_INCLUDE_FILE(string.h HAVE_STRING_H)
CHECK_INCLUDE_FILE(sys/socket.h HAVE_SYS_SOCKET_H)
CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILE(time.h HAVE_TIME_H)
CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILE(regexp.h HAVE_REGEXP_H)
CHECK_INCLUDE_FILE(regex.h HAVE_REGEX_H)



CHECK_FUNCTION_EXISTS(strchr HAVE_STRCHR)
CHECK_FUNCTION_EXISTS(memcpy HAVE_MEMCPY)
CHECK_FUNCTION_EXISTS(fchdir HAVE_FCHDIR)


add_subdirectory(src)
