dnl Process this file with autoconf to produce a configure script.
AC_INIT(NEWS)

dnl Check for configuration options
dnl ==========================

AC_ARG_ENABLE(compat-initial-ligo,
[  --enable-compat-initial-ligo    Build for Inital LIGO Compatibility],
[if test x$enableval = xyes; then
  AC_DEFINE(COMPAT_INITIAL_LIGO)
fi],)

AC_OUTPUT( Makefile )
AC_OUTPUT( src/epics/util/Makefile )
