dnl Process this file with autoconf to produce a configure script.
AC_INIT(NEWS)

linux_version=$(uname --release)
AC_SUBST(linux_version)

dnl Check for configuration options
dnl ==========================

AC_OUTPUT( Makefile )
AC_OUTPUT( src/epics/util/Makefile )
AC_OUTPUT( doc/doxygen.cfg )
AC_OUTPUT( doc/doxScript )
