add_subdirectory(gds)
add_subdirectory(daqd)
add_subdirectory(dv)
add_subdirectory(nds)
add_subdirectory(mx_stream)
add_subdirectory(run_number)
add_subdirectory(drv)
add_subdirectory(local_dc)

if (${LibZMQ_FOUND})
    add_subdirectory(zmq_stream)
else (${LibZMQ_FOUND})
    MESSAGE("Skipping zmq_stream")
endif (${LibZMQ_FOUND})

if (${DOLPHIN_FOUND})
    add_subdirectory(ix_stream)
else (${DOLPHIN_FOUND})
    MESSAGE("Skipping ix_stream")
endif (${DOLPHIN_FOUND})

if (${DEV_BUILD})
    add_subdirectory(fe_stream_test)
endif(${DEV_BUILD})