add_subdirectory(args)
add_subdirectory(epics)
add_subdirectory(gds)
add_subdirectory(daqd)
add_subdirectory(dv)
add_subdirectory(nds)
add_subdirectory(simple_pv)
add_subdirectory(mx_stream)
add_subdirectory(run_number)
add_subdirectory(drv)
add_subdirectory(local_dc)
add_subdirectory(fe_stream_test)
add_subdirectory(pub_sub_stream)
add_subdirectory(util)

if (${DOLPHIN_FOUND})
    add_subdirectory(ix_stream)
else (${DOLPHIN_FOUND})
    MESSAGE("Skipping ix_stream")
endif (${DOLPHIN_FOUND})
